src/app/instruments/instrument.css
@font-face {
  font-family: "LCD";
  src: url("/font/lcd-font.svg#LCD") format("svg"); /* iOS 4.1- */
}

div.instrument {
  width: 200px;
  height: 200px;
  position: relative;
  display: inline-block;
  overflow: hidden;
}

/* The box containing any element of an indicator */
div.instrument .box {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

/* The box containing any element of an indicator */
div.instrument .background {
  display: none;
}

div.instrument .move {
  will-change: transform;
}

svg text {
  text-anchor: middle;
  alignment-baseline: middle;
}

/* SVG buttons */
svg.buttons text {
  font-size: 12px;
  font-weight: bold;
  pointer-events: none;
}

svg.buttons text.frequency {
  font-size: 14px;
  font-family: "LCD";
  pointer-events: none;
  transform: translateY(65%);
  fill: red;
}

svg.buttons circle {
  /* stroke: black; */
  /* stroke-width: 4; */
  r: 20;
  cy: 30;
}

svg.buttons rect {
  height: 30;
  width: 30;
  rx: 5;
  ry: 5;
}

svg.buttons circle.inactive,
rect.inactive {
  fill: grey;
}

svg.buttons rect:hover,
circle:hover {
  stroke: blue;
}

.box svg {
  height: 250;
  width: 250;
}

svg.course1 line {
  stroke: yellow;
  stroke-width: 4;
}

svg.course1 marker polygon {
  fill: yellow;
}

svg.course2 polygon {
  fill: none;
  stroke: green;
  stroke-width: 2;
}

svg.course2 rect {
  fill: none;
  stroke: green;
  stroke-width: 2;
}

div.heading_text text {
  fill: white;
}

